<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:foregroundTint="@color/white"
    tools:context=".activity.EventosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/principal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_atras"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_back_24"
                app:tint="@color/white"
                android:contentDescription="@string/retroceder" />

            <TextView
                android:id="@+id/tv_titulo_lugar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="21dp">

            <TextView
                android:id="@+id/tv_eventos_en_lugar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/eventos_en"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nuevo_evento"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nuevo" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_eventos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="21dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>